Fix notification popup z-index

--- a/app/styles/components/_alert-column.css
+++ b/app/styles/components/_alert-column.css
@@ -4,4 +4,5 @@
   width: 20%;
   right: 10%;
   top: 80px;
+  z-index: 999999999;
 }
